Planner.json content not showing... - Significant changes to planner related files. - Application can build and run, just not reading the json correctly somewhere...

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -136,25 +136,26 @@ button:active, #add-button:active, #search-button:active {
 }
 
 /* PLANNER STYLING */
-.meal-planner {
+#meal-planner-container {
     width: 100%;
-    border-collapse: collapse;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
     margin: 20px 0;
+    gap: 10px;
 }
 
-.meal-planner th, .meal-planner td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: center;
+.day-card {
+    flex: auto;
+    display: flex;
+    flex-direction: column;
+    width: 100px;
+    align-items: center;
+    border: 1px solid grey;
+    border-radius: 10px;
 }
 
-.meal-planner th {
-    background-color: #f2f2f2;
-}
-
-.meal-planner tr:hover {
-    background-color: #f5f5f5;
-}
 
 /* recipe CARD STYLING */
 .recipe-card {
